fix launch, usings and references

--- a/src/Animals.Api/Animals.Api.csproj
+++ b/src/Animals.Api/Animals.Api.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Animals.Commons\Animals.Commons.csproj" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
