--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,14 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": ".NET Core Launch (console)",
+      "name": "Animals API",
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
-      "program": "${workspaceFolder}/bin/Debug/<insert-target-framework-here>/<insert-project-name-here>.dll",
+      "program": "${workspaceFolder}/src/Animals.Api/bin/Debug/net6.0/Animals.Api.dll",
+      "cwd": "${workspaceFolder}/src/Animals.Api",
       "args": [],
-      "cwd": "${workspaceFolder}",
       "console": "internalConsole",
       "stopAtEntry": false
     },
